@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <i18n>
-  <element ident="TEI" es="TEIes" pt="TEIpt" fr="TEIfr" ca="TEIca" it="TEIit"/>
+  <element ident="TEI"/>
   <element ident="ab" es="ba"/>
   <element ident="abbr" es="abrev" fr="abreviation" ca="abrev"/>
   <element ident="accMat"/>
@@ -33,7 +33,7 @@
   <element ident="authority" es="autoridad" fr="autorite" ca="autoritat"/>
   <element ident="availability" es="disponibilidad" fr="disponibilite" ca="disponibilitat"/>
   <element ident="back" es="anexos" fr="annexes" ca="annexos"/>
-  <element ident="bibl" es="bibl" fr="bibl" ca="bibl"/>
+  <element ident="bibl"/>
   <element ident="biblFull" es="biblCompleta" fr="biblComplete" ca="biblCompl"/>
   <element ident="biblScope" es="alcanceBibl" ca="AbastBibl"/>
   <element ident="biblStruct"/>
@@ -81,7 +81,7 @@
   <element ident="condition"/>
   <element ident="constitution"/>
   <element ident="content"/>
-  <element ident="corr" es="corr" fr="corr" ca="corr"/>
+  <element ident="corr"/>
   <element ident="correction"/>
   <element ident="country"/>
   <element ident="creation" es="creacion" fr="creation" ca="creacio"/>
@@ -300,13 +300,13 @@
   <element ident="orgName"/>
   <element ident="orgTitle"/>
   <element ident="orgType"/>
-  <element ident="orig" es="orig" fr="orig" ca="orig"/>
+  <element ident="orig"/>
   <element ident="origDate"/>
   <element ident="origPlace"/>
   <element ident="origin"/>
   <element ident="orth"/>
   <element ident="overview"/>
-  <element ident="p" es="p" fr="p" ca="p"/>
+  <element ident="p"/>
   <element ident="pRef"/>
   <element ident="pVar"/>
   <element ident="page"/>
@@ -333,7 +333,7 @@
   <element ident="prologue"/>
   <element ident="pron"/>
   <element ident="provenance"/>
-  <element ident="ptr" es="ptr" fr="ptr" ca="ptr"/>
+  <element ident="ptr"/>
   <element ident="pubPlace" es="lugarPublicacion" fr="lieuPublication" ca="llocPublicacio"/>
   <element ident="publicID"/>
   <element ident="publicationStmt" es="infoPublicacion" fr="infoPublication" ca="infoPublicacio"/>
@@ -349,16 +349,16 @@
   <element ident="recordHist"/>
   <element ident="recording"/>
   <element ident="recordingStmt"/>
-  <element ident="ref" es="ref" fr="ref" ca="ref"/>
+  <element ident="ref"/>
   <element ident="refsDecl" es="declReferenc" fr="declRef" ca="DeclReferencia"/>
-  <element ident="reg" es="reg" fr="reg" ca="reg"/>
+  <element ident="reg"/>
   <element ident="region"/>
   <element ident="relation"/>
   <element ident="remarks"/>
   <element ident="rendition" es="formato" fr="format" ca="format"/>
   <element ident="repository"/>
   <element ident="residence"/>
-  <element ident="resp" es="resp" fr="resp" ca="resp"/>
+  <element ident="resp"/>
   <element ident="respStmt" es="infoResp" fr="infoResp" ca="infoResp"/>
   <element ident="respons"/>
   <element ident="restore"/>
@@ -377,7 +377,7 @@
   <element ident="scriptStmt"/>
   <element ident="secfol"/>
   <element ident="second"/>
-  <element ident="seg" es="seg" fr="seg" ca="seg"/>
+  <element ident="seg"/>
   <element ident="segmentation"/>
   <element ident="sense"/>
   <element ident="series"/>
@@ -387,7 +387,7 @@
   <element ident="settingDesc"/>
   <element ident="settlement"/>
   <element ident="shift"/>
-  <element ident="sic" es="sic" fr="sic" ca="sic"/>
+  <element ident="sic"/>
   <element ident="signatures"/>
   <element ident="signed" es="firmado" fr="signe" ca="signat"/>
   <element ident="soCalled" es="denominado" fr="aussiAppele" ca="anomenat"/>
@@ -502,7 +502,7 @@
   <attribute ident="baseform"/>
   <attribute ident="calendar" es="calendario" fr="calendrier" ca="calendari"/>
   <attribute ident="cause"/>
-  <attribute ident="cert" es="cert" fr="cert" ca="cert"/>
+  <attribute ident="cert"/>
   <attribute ident="certainty" es="certeza" fr="certainement" ca="cert"/>
   <attribute ident="character"/>
   <attribute ident="children"/>
@@ -513,18 +513,18 @@
   <attribute ident="contemporary"/>
   <attribute ident="copyOf" ca="copia"/>
   <attribute ident="corr"/>
-  <attribute ident="corresp" es="corresp" fr="corresp" ca="corresp"/>
+  <attribute ident="corresp"/>
   <attribute ident="crdate" es="fechaCreac" fr="dateCreation" ca="dataCreac"/>
   <attribute ident="creator" es="creador" fr="createur" ca="creador"/>
   <attribute ident="date"/>
   <attribute ident="date.created" es="fecha.creacion" fr="date.creation" ca="data.creacio"/>
   <attribute ident="date.updated" es="fecha.actualizacion" fr="date.actualisation" ca="data.actualitzacio"/>
-  <attribute ident="decls" es="decls" fr="decls" ca="decls"/>
+  <attribute ident="decls"/>
   <attribute ident="default" es="error" fr="defaut" ca="errada"/>
   <attribute ident="defective"/>
   <attribute ident="degree"/>
   <attribute ident="delim"/>
-  <attribute ident="desc" es="desc" fr="desc" ca="desc"/>
+  <attribute ident="desc"/>
   <attribute ident="dim"/>
   <attribute ident="direct" es="directo" fr="direct" ca="directe"/>
   <attribute ident="discrete"/>
@@ -614,7 +614,7 @@
   <attribute ident="ord"/>
   <attribute ident="order"/>
   <attribute ident="org" es="organiz" fr="org" ca="organit"/>
-  <attribute ident="orig" es="orig" fr="orig" ca="orig"/>
+  <attribute ident="orig"/>
   <attribute ident="origin"/>
   <attribute ident="otherLangs"/>
   <attribute ident="outDegree"/>
@@ -630,7 +630,7 @@
   <attribute ident="real"/>
   <attribute ident="reason" es="razon" fr="raison" ca="rao"/>
   <attribute ident="refunit"/>
-  <attribute ident="reg" es="reg" fr="reg" ca="reg"/>
+  <attribute ident="reg"/>
   <attribute ident="rel"/>
   <attribute ident="rend" es="formato" fr="format" ca="format"/>
   <attribute ident="render" ca="format"/>
@@ -649,7 +649,7 @@
   <attribute ident="script"/>
   <attribute ident="select" ca="select"/>
   <attribute ident="sex"/>
-  <attribute ident="sic" es="sic" fr="sic" ca="sic"/>
+  <attribute ident="sic"/>
   <attribute ident="sigil"/>
   <attribute ident="since"/>
   <attribute ident="size"/>
@@ -699,7 +699,7 @@
   <value ident="I"/>
   <value ident="L"/>
   <value ident="M"/>
-  <value ident="N" es="N" fr="N" ca="n"/>
+  <value ident="N"/>
   <value ident="R"/>
   <value ident="TEI"/>
   <value ident="Y" es="S" fr="O" ca="s"/>
